thrasyboulos/hydor/overlays/local/alexandreia/aristarchos/temp-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    gitops.ignore: "true"
  name: allow-apologia-namespace-to-aristarchos
  namespace: alexandreia
spec:
  endpointSelector:
    matchLabels:
      app: aristarchos
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: apologia
      toPorts:
        - ports:
            - port: "50060"
              protocol: TCP
